force-app/main/default/objects/PBS_AAAP_Offer__c/PBS_AAAP_Offer__c.object-meta.xml
<CustomObject>
    <description>AAAP - This object stores all information related to an AAAP Offer</description>
    <label>Offer</label>
    <nameField>
        <displayFormat>SFO-Offer-{000000}</displayFormat>
        <label>Offer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>