force-app/main/default/objects/PBS_AAAP_Offer__c/fields/Confirm_Full_Term_Lease_Months__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Full_Term_Lease_Months__c</fullName>
    <defaultValue>null</defaultValue>
    <label>Confirm Full Term Lease Months</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>