force-app/main/default/objects/PBS_AAAP_Offer__c/fields/EDWOSB_Joint_Venture_Names__c.field-meta.xml
<CustomField>
    <fullName>EDWOSB_Joint_Venture_Names__c</fullName>
    <description>Names of EDWOSB Concern or concerns particiapating in joint venture</description>
    <label>EDWOSB Joint Venture Names</label>
    <length>100</length>
    <type>Text</type>
</CustomField>