force-app/main/default/objects/PBS_AAAP_Offer__c/fields/Formula_RLP_Num__c.field-meta.xml
<CustomField>
    <fullName>Formula_RLP_Num__c</fullName>
    <formula>PBS_AAAP_RLP_Number__r.PBS_AAAP_RLP_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula RLP Num</label>
    <type>Text</type>
</CustomField>