force-app/main/default/objects/PBS_AAAP_Offer__c/fields/Formula_RLP_Region__c.field-meta.xml
<CustomField>
    <fullName>Formula_RLP_Region__c</fullName>
    <formula>Text(PBS_AAAP_RLP_Number__r.PBS_AAAP_Region__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region</label>
    <type>Text</type>
</CustomField>