force-app/main/default/objects/PBS_AAAP_Offer__c/fields/Formula_RLP_Title__c.field-meta.xml
<CustomField>
    <fullName>Formula_RLP_Title__c</fullName>
    <formula>PBS_AAAP_RLP_Number__r.PBS_AAAP_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RLP Title</label>
    <type>Text</type>
</CustomField>