force-app/main/default/objects/PBS_AAAP_Offer__c/fields/Master_Offer__c.field-meta.xml
<CustomField>
    <fullName>Master_Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Offer</label>
    <referenceTo>PBS_AAAP_Offer__c</referenceTo>
    <relationshipLabel>Offers (Master Offer)</relationshipLabel>
    <relationshipName>Offers1</relationshipName>
    <type>Lookup</type>
</CustomField>