force-app/main/default/objects/PBS_AAAP_Offer__c/fields/OfferExternalId__c.field-meta.xml
<CustomField>
    <fullName>OfferExternalId__c</fullName>
    <externalId>true</externalId>
    <label>OfferExternalId</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>