force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_24_HR_HVAC_Cost_Per_ABOA__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_24_HR_HVAC_Cost_Per_ABOA__c</fullName>
    <description>Areas requiring 24 hour HVAC (LAN, etc.) per ABOA SF</description>
    <inlineHelpText>Areas requiring 24 hour HVAC (LAN, etc.) per ABOA SF</inlineHelpText>
    <label>24 HR HVAC Cost Per ABOA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>