force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_24_HR_HVAC_Cost_Per_ABOA_GOV__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_24_HR_HVAC_Cost_Per_ABOA_GOV__c</fullName>
    <description>Gov Leased Space-24 HR HVAC Cost Per ABOA</description>
    <inlineHelpText>Areas requiring 24 hour HVAC (LAN, etc.) per ABOA SF</inlineHelpText>
    <label>Gov Leased-Area req. 24 hour HVAC/ABOA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>