force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_ACCEPTED_GEN_FORM_3517__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_ACCEPTED_GEN_FORM_3517__c</fullName>
    <label>General Clauses (GSA Form 3517B)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>