force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_ACCEPTED_PROV_FORM_3516__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_ACCEPTED_PROV_FORM_3516__c</fullName>
    <label>Solicition Provisions (GSA Form 3516A)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>