force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_ACCEPTED_REP_CERT_FORM_3518__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_ACCEPTED_REP_CERT_FORM_3518__c</fullName>
    <label>Reps and Certs (GSA Form 3518)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>