force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_ACCEPTED_TERMS_AND_COND__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_ACCEPTED_TERMS_AND_COND__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RLP Number Terms &amp; Conditions</label>
    <type>Checkbox</type>
</CustomField>