force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_Accessibility__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Accessibility__c</fullName>
    <inlineHelpText>With regard to Accessibility (Architectural Barriers Act Accessibility Standard / ABAAS):
The Property meets the Lease accessibility standards.
The Property will be improved to meet the Lease accessibility standards.
The Property does not meet the Lease accessibility standards and will not be upgraded</inlineHelpText>
    <label>Accessibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meets</fullName>
            </value>
            <value>
                <fullName>Will meet</fullName>
            </value>
            <value>
                <fullName>Does not meet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>