force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_Adj_for_Reduced_Services_Rate__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Adj_for_Reduced_Services_Rate__c</fullName>
    <label>Adjustment for Reduced Services Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>