force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_AFFIRMATIVE_ACTION_CONTRACTS__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_AFFIRMATIVE_ACTION_CONTRACTS__c</fullName>
    <description>(a) Does the property owner represent that it has not previously had contracts subject to the written affirmative action programs requirement of the rules and regulations of the Secretary of Labor?</description>
    <label>Affirmative action contracts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>