force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_AFFIRMATIVE_ACTION_PROGRAMS__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_AFFIRMATIVE_ACTION_PROGRAMS__c</fullName>
    <description>Does the property owner represent that it has developed and has on file at each establishment affirmative action programs required by the rules and regulations of the Secretary of Labor (41 CFR 60-1 and 60-2)?</description>
    <label>Affirmative action programs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>