force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_Annual_cost_entire_garage_park__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Annual_cost_entire_garage_park__c</fullName>
    <description>(i) What is the annual lump sum cost ($) to lease the entire parking garage for security purposes?</description>
    <label>Annual cost entire garage parking</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>