force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_Annual_TI_Rent__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Annual_TI_Rent__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Annual TI Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>