force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_Approximate_Construction_Level__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Approximate_Construction_Level__c</fullName>
    <label>Approximate Construction Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Improvements Needed</fullName>
            </value>
            <value>
                <fullName>Already Meets</fullName>
            </value>
            <value>
                <fullName>New Construction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>