force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_ARCH_ENG_FEES_PER_USF__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_ARCH_ENG_FEES_PER_USF__c</fullName>
    <description>Architectural and engineering fees (in $ per ABOA or %) for construction of the initial tenant improvements up to some dollar amount per ABOA, including change orders, for the block of space offered:</description>
    <label>Architectural Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>