force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_ARCHITECTURAL_ENG_FEES_UOM__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_ARCHITECTURAL_ENG_FEES_UOM__c</fullName>
    <description>Architecture &amp; Engineering fees Unit Of Measurement</description>
    <label>Arch / Engineering Fees Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Per ABOA Square Feet ($)</fullName>
                <label>Per ABOA SF ($)</label>
            </value>
            <value>
                <fullName>Percent of Total Construction Costs (%)</fullName>
            </value>
            <value>
                <fullName>Flat Fee ($)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>