force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_Architectural_Fees_Flat__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Architectural_Fees_Flat__c</fullName>
    <label>Architectural Fees Flat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>