force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_Architectural_Fees_Percent__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Architectural_Fees_Percent__c</fullName>
    <label>Architectural Fees Percent</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>