force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_Asbestos__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Asbestos__c</fullName>
    <inlineHelpText>With regard to Asbestos-Containing Material (ACM), select all that apply:
The Building contains no ACM.
The Building contains undamaged, nonfriable ACM.
The Building contains thermal system insulation ACM which is not damaged or subject to damage by routine operations.
The Building contains ACM that does not fall within any of the above categories.
The building contains ACM; abatement will be completed prior to occupancy.</inlineHelpText>
    <label>Asbestos</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <label>The Building contains no ACM.</label>
            </value>
            <value>
                <fullName>Undamaged_nonfriable</fullName>
                <label>The Building contains undamaged, nonfriable ACM.</label>
            </value>
            <value>
                <fullName>thermal</fullName>
                <label>The Building contains thermal system insulation ACM which is not damaged or subject to damage by routine operations.</label>
            </value>
            <value>
                <fullName>ACM_other</fullName>
                <label>The Building contains ACM that does not fall within any of the above categories.</label>
            </value>
            <value>
                <fullName>ACM_abatement</fullName>
                <label>The building contains ACM, abatement will be completed prior to occupancy.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>