force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_AUTHORIZED_SIGNATORY__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_AUTHORIZED_SIGNATORY__c</fullName>
    <description>(a) Does the signatory acknowledge that each signature on the offer is considered to be certification by the signatory that the signatory has been authorized, in writing, to act as agent for the following principals in certifying that those principals have not participated, and will not participate in any action contrary to subparagraphs (a)(1) through (a)(3) of the clause, entitled &quot;52.203-02 - CERTIFICATE OF INDEPENDENT PRICE DETERMINATION (APR 1985),&quot; in the GSA Form 3518?</description>
    <label>Authorized Signatory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>