force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_BLD_INCOME_PERCENT_GAR_SPACE__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_BLD_INCOME_PERCENT_GAR_SPACE__c</fullName>
    <formula>PBS_AAAP_GARAGE_SPACE_RSF__c/PBS_AAAP_GEN_PURPOSE_RENTABLE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Space Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>