force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_BLDG_Physical_Remote_Stairwell__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_BLDG_Physical_Remote_Stairwell__c</fullName>
    <description>Does the building fully have 2 physically remote stairwells existing in the building (scissor stairs only count as one stairwell)?</description>
    <label>Building Stairwell Compliant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>