force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_BLDG_Wide_Alarm_System__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_BLDG_Wide_Alarm_System__c</fullName>
    <description>Does the building have a building-wide alarm system?</description>
    <label>Building Wide Alarm System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>