force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_BSAC_Amorization_in_Years__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_BSAC_Amorization_in_Years__c</fullName>
    <description>BSAC Amorization in Years</description>
    <inlineHelpText>BSAC Amorization in Years</inlineHelpText>
    <label>BSAC Amortization in Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>