force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_BSAC_Total_Build_out_Costs__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_BSAC_Total_Build_out_Costs__c</fullName>
    <description>BSAC Total Build-out Costs</description>
    <inlineHelpText>BSAC Total Build-out Costs</inlineHelpText>
    <label>BSAC Total Build-out Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>