force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_BUILDING_LOCATED_SEISMIC_ZON__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_BUILDING_LOCATED_SEISMIC_ZON__c</fullName>
    <description>Is your building located in a medium- or high-risk seismic zone as outlined in the RLP? (Link to Seismic Map)</description>
    <label>Building Located in Seismic Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>