force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_Building_Name__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Building_Name__c</fullName>
    <description>Building Name</description>
    <label>Building Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>