force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_Building_Sprinklered__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Building_Sprinklered__c</fullName>
    <description>Is the building fully sprinklered?</description>
    <label>Building Sprinklered</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>