force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_BUILDING_TYPE__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_BUILDING_TYPE__c</fullName>
    <description>Building Type</description>
    <label>Building Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown/Not Listed</fullName>
            </value>
            <value>
                <fullName>Wood Frame, Wood Shear Panels W1 &amp; W2</fullName>
            </value>
            <value>
                <fullName>Wood Frame, Wood Shear Panels W1A</fullName>
            </value>
            <value>
                <fullName>Steel Moment-Resisting Frame S1 &amp; S1A</fullName>
            </value>
            <value>
                <fullName>Steel Braced Frame S2 &amp; S2A</fullName>
            </value>
            <value>
                <fullName>LIght Metal Frame S3</fullName>
                <label>Light Metal Frame S3</label>
            </value>
            <value>
                <fullName>Steel Frame w/ Concrete Shear Walls S4</fullName>
            </value>
            <value>
                <fullName>Steel Frame with URM Infill S5 &amp; S5A</fullName>
            </value>
            <value>
                <fullName>Reinforced Concrete Moment-Resisting Frame C1</fullName>
            </value>
            <value>
                <fullName>Reinforced Concrete Shear Walls C2 &amp; C2A</fullName>
            </value>
            <value>
                <fullName>Concrete Frame with URM Infill C3 &amp; C3A</fullName>
            </value>
            <value>
                <fullName>Tilt-up Concrete PC1 &amp; PC1A</fullName>
            </value>
            <value>
                <fullName>Precast Concrete Frame PC2 &amp; PC2A</fullName>
            </value>
            <value>
                <fullName>Reinforced Masonry RM1</fullName>
            </value>
            <value>
                <fullName>Reinforced Masonry RM2</fullName>
            </value>
            <value>
                <fullName>Unreinforced Masonry URM</fullName>
            </value>
            <value>
                <fullName>Unreinforced Masonry URMA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>