force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_can_withdraw__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_can_withdraw__c</fullName>
    <defaultValue>false</defaultValue>
    <label>can withdraw</label>
    <type>Checkbox</type>
</CustomField>