force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_CCR_REGISTRATION_ACTIVE_STATUS__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_CCR_REGISTRATION_ACTIVE_STATUS__c</fullName>
    <description>9. Is the property owner&apos;s registration in the Central Contractor Registration (CCR) System active?</description>
    <label>CCR System Active</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>