force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_CERTIFICATE_OF_SIGNATORY__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_CERTIFICATE_OF_SIGNATORY__c</fullName>
    <description>4. Does the signatory certify that it is the person in the property owner&apos;s organization responsible for determining the prices being offered in this bid or proposal, and that the signatory has not participated and will not participate in any action contrary to subparagraphs (a)(1) through (a)(3) of the clause, entitled &quot;52.203-02 - CERTIFICATE OF INDEPENDENT PRICE DETERMINATION (APR 1985),&quot; in the GSA Form 3518?</description>
    <label>Certificate of Signatory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>