force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_CERTIFICATION_DATE__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_CERTIFICATION_DATE__c</fullName>
    <description>Date Energy Star Certified</description>
    <inlineHelpText>Has the Property received the ENERGY STAR® Label conferred by the Environmental Protection Agency (EPA) within the past twelve months?</inlineHelpText>
    <label>Date Energy Star Certified</label>
    <type>Date</type>
</CustomField>