force-app/main/default/objects/PBS_AAAP_Offer__c/fields/PBS_AAAP_City__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_City__c</fullName>
    <description>City</description>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>